-
    New feature: Made DEFAULT_INCLUDE_DESCRIPTION_IN_NOTIFICATIONS
    default to True so that by default the issue description is shown
    in the email notifications.
    
    Bug fixed: Emails in with a subject line containing the word
    'General' without a section option called that failed.

    New feature: Upgraded to latest version of jQuery 1.3.2.

    New feature: Added UnicodeSplitter to be able to properly index
    and search Unicode text. 
    
- 0.10.3

    Bug fixed: Fixed dispatcher() so that it doesn't break on deleted
    issues.
    
    Bug fixed: CMF member can be None without breaking. (Real#0811)

    New feature: Issue ID is included in the subject line of email-in
    receipts if set up to show ID with the title. Real#0797

    New feature: Select custom fields become multiple-selects when used
    as a filter. Real#0784, Real#0762

    Bug fixed: Loaded filter options in AJAX now with stopped client
    cache. Real#0782, Thanks Jack.
    
    Bug fixed: File attachments of followups weren't immediately
    indexed.
    
    Bug fixed: Sometimes followup objects weren't index properly by
    path. This was not a problem when the catalog was only used for
    searching but now it's used to count issues too.
    
    New feature: Detail changes to issues are recorded and shown on
    the issue page.

    New feature: If you upload a file whose exact name is a method or
    a template the IssueTrackerProduct itself the files get
    automatically renamed.
    
    New feature: Search smarter by not doing a wildcard search on
    titles unless not found exactly anywhere else.
    
    Bug fixed: Static file's from misc_ set an incorrect header called
    Cache-Length.
    
    New feature: Assignee name shown in rich list on List Issues.
    (Real#0757)
    
    New feature: Document title is changing when a clarvoyant message
    appears on followups.
    
    New feature: Assignee is including in the CSV export from List