@@ -182,6 +182,7 @@ WHICHSUBLIST_SESSION_KEY = 'WhichSubListView' # XXX used anymore?
 USE_FILTER_IN_SEARCH_SESSION_KEY = 'FilterInSearch'
 ALREADY_NOT_SPAMBOT_SESSION_KEY = 'AlreadyNotSpambot'
 EMAIL_ISSUEID_HEADER = 'IssueTrackerProduct_IssueID'
+LIST_URL_SESSION_KEY = 'ListURL'
 
 # Language constants
 FAILURE_SUBJECT = _('Subject')
